projects/primus/gateway/k8s-config/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  namespace: primus-dev
  labels:
    app: gateway
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: public
  tls:
    - hosts:
        - primus-gateway-dev.coherent.in
      secretName: gateway-tls
  rules:
    - host: "primus-gateway-dev.coherent.in"
      http:
        paths:
          - path: /auth-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-svc
                port:
                  number: 8080
          - path: /logic-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: logic-svc
                port:
                  number: 8082
          - path: /master-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: master-svc
                port:
                  number: 8081
